--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 #landing-screen {
     background-color: rgb(0, 0, 0);
     color: rgb(248, 182, 59);
-    height: 450px;
+    height: 560px;
     font-size: 30px;
 }
 
@@ -31,7 +31,7 @@ html {
 #subtitle {
     color: gray;
     font-size: 25px;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 #downicon {
@@ -72,16 +72,30 @@ html {
 
 .food img {
     margin: 3px;
+    height: 250px;
     border: #040800 5px solid;
 }
 
 .food-title {
     font-size: 40px;
-    margin: -20px;
+    margin: -15px;
     text-align: center;
 }
 
 .food-desc {
     text-align: center;
     margin-bottom: 15px;
+}
+
+.food-price {
+    display: flex;
+    justify-content: center;
+}
+
+.price {
+    border: 4px double black;
+    width: 100px;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 27px;
 }
