--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 html {
     font-family: 'Roboto', sans-serif;
-    background-color: #040800;
+    background-color: #0a1300;
     color: rgb(245, 236, 221);
     scroll-behavior: smooth;
 }
@@ -28,6 +28,11 @@ html {
     text-align: center;
     padding-top: 110px;
     animation: fadeIn 3s;
+}
+
+#title img {
+    height: 200px;
+    width: 300px;
 }
 
 #socials img {
@@ -70,7 +75,12 @@ html {
     padding: 10px;
     display: flex;
     flex-direction: column;
+    max-width: 500px;
 
+}
+
+.tl {
+    font-size: 20px;
 }
 
 #title-foods {
@@ -97,7 +107,7 @@ html {
 }
 
 .food-title {
-    font-size: 40px;
+    font-size: 35px;
     margin: -15px;
     text-align: center;
 }
