--- a/style.css
+++ b/style.css
@@ -110,6 +110,8 @@ html {
     font-size: 35px;
     margin: -15px;
     text-align: center;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .food-desc {
